WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44027
Web Inspector: [REGRESSION] console's clear command does not work.
https://bugs.webkit.org/show_bug.cgi?id=44027
Summary
Web Inspector: [REGRESSION] console's clear command does not work.
Pavel Feldman
Reported
2010-08-15 05:15:55 PDT
Patch to follow.
Attachments
[PATCH] Proposed fix.
(7.93 KB, patch)
2010-08-15 05:27 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
[PATCH] Same with proper test title.
(7.23 KB, patch)
2010-08-15 05:34 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2010-08-15 05:16:20 PDT
Regresed in
r63891
.
Pavel Feldman
Comment 2
2010-08-15 05:27:14 PDT
Created
attachment 64443
[details]
[PATCH] Proposed fix.
Pavel Feldman
Comment 3
2010-08-15 05:34:32 PDT
Created
attachment 64444
[details]
[PATCH] Same with proper test title.
Joseph Pecoraro
Comment 4
2010-08-15 10:46:26 PDT
Any particular reason we wait for a callback to clear the UI? I don't see a purpose to the consoleMessagesCleared notification. I'd rather the UI clear instantly. Am I missing something, or are we just being consistent and letting every backend message have some kind of callback? Looks good to me, I just have this question.
Pavel Feldman
Comment 5
2010-08-15 11:15:09 PDT
This bug should have stated more clearly that it is about clear() command in the console not working. We initiate clear from injected script (backend) in case of command line api use. So we need to send a direct message to the frontend. Easy to forget - same happened to Yury. So I added a test.
Joseph Pecoraro
Comment 6
2010-08-15 13:11:23 PDT
Comment on
attachment 64444
[details]
[PATCH] Same with proper test title. (In reply to
comment #5
)
> This bug should have stated more clearly that it is about clear() command > in the console not working.
My fault. Its entirely clear from the bug's title, I just overlooked it!
> We initiate clear from injected script (backend) in case of command line > api use. So we need to send a direct message to the frontend. Easy to forget > - same happened to Yury. So I added a test.
Haha, you're right its easy to forget =). Good fix and nice test. r=me
Pavel Feldman
Comment 7
2010-08-16 05:16:53 PDT
Comment on
attachment 64444
[details]
[PATCH] Same with proper test title. Clearing flags on attachment: 64444 Committed
r65412
: <
http://trac.webkit.org/changeset/65412
>
Pavel Feldman
Comment 8
2010-08-16 05:17:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug