2010-08-16  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Joseph Pecoraro.

        Web Inspector: [REGRESSION] console's clear command does not work.
        https://bugs.webkit.org/show_bug.cgi?id=44027

        * inspector/console-clear.html:
        * inspector/console-command-clear-expected.txt: Added.
        * inspector/console-command-clear.html: Copied from LayoutTests/inspector/console-clear.html.
2010-08-16  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Joseph Pecoraro.

        Web Inspector: [REGRESSION] console's clear command does not work.
        https://bugs.webkit.org/show_bug.cgi?id=44027

        Test: inspector/console-command-clear.html

        * inspector/Inspector.idl:
        * inspector/InspectorBackend.cpp:
        * inspector/InspectorBackend.h:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::clearConsoleMessages):
        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleView.prototype.requestClearMessages):
        * inspector/front-end/inspector.js:
        (WebInspector.consoleMessagesCleared):

Canonical link: https://commits.webkit.org/56212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65412 268f45cc-cd09-0410-ab3c-d52691b4dbfc