WebCore/inspector/InspectorBackend.cpp
@@ -106,11 +106,6 @@ void InspectorBackend::dispatchOnInjectedScript(long injectedScriptId, const Str
     injectedScript.dispatch(methodName, arguments, result, hadException);
 }
 
-void InspectorBackend::clearConsoleMessages()
-{
-    m_inspectorController->clearConsoleMessages();
-}
-
 void InspectorBackend::releaseWrapperObjectGroup(long injectedScriptId, const String& objectGroup)
 {
     m_inspectorController->injectedScriptHost()->releaseWrapperObjectGroup(injectedScriptId, objectGroup);
