WebCore/inspector/InspectorController.cpp
@@ -361,6 +361,8 @@ void InspectorController::clearConsoleMessages()
     m_injectedScriptHost->releaseWrapperObjectGroup(0 /* release the group in all scripts */, "console");
     if (m_domAgent)
         m_domAgent->releaseDanglingNodes();
+    if (m_remoteFrontend)
+        m_remoteFrontend->consoleMessagesCleared();
 }
 
 void InspectorController::startGroup(MessageSource source, ScriptCallStack* callStack, bool collapsed)
